api v3 with transactions management

--- a/app/src/main/resources/templates/register-success.html
+++ b/app/src/main/resources/templates/register-success.html
@@ -22,7 +22,7 @@
 <body>
 <div class="box">
     <h1>Registration Successful</h1>
-    <p>You can now <a th:href="@{/login}">log in</a> using your credentials.</p>
+    <p>You can now <a th:href="@{/protected}">access</a> accounts management</p>
 </div>
 </body>
 </html>
